Styled main page

--- a/styles.scss
+++ b/styles.scss
@@ -2,3 +2,12 @@
 h1 {
   font-size: 15px;
 }
+
+.console-and-data {
+  display: flex;
+}
+
+.console {
+  background-color: lightgray;
+  width: 30%;
+}
