--- a/styles.css
+++ b/styles.css
@@ -15,12 +15,13 @@ h1 {
   padding: 15px;
   background-color: lightgray;
   width: 20%;
+  border-radius: 0px 10px 10px 0px;
 }
 
 .graph {
   padding: 10px;
-  width: 80%;
-  background-color: rgb(203, 238, 250)
+  margin-left: 10px;
+  width: 75%;
 }
 
 
