--- a/styles.scss
+++ b/styles.scss
@@ -1,6 +1,10 @@
 
 h1 {
-  font-size: 15px;
+  padding: 20px 0px 0px 20px;
+  height: 60px;
+  font-size: 40px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .console-and-data {
@@ -8,6 +12,13 @@ h1 {
 }
 
 .console {
+  padding: 15px;
   background-color: lightgray;
-  width: 30%;
+  width: 20%;
+}
+
+.graph {
+  padding: 10px;
+  width: 80%;
+  background-color: rgb(203, 238, 250)
 }
