--- a/styles.css
+++ b/styles.css
@@ -46,6 +46,7 @@ h2 {
 #selectButton {
   margin-left: 5px;
   font-size: 14px;
+  width: 100%;
 }
 
 .console-data-panel {
@@ -53,6 +54,7 @@ h2 {
   grid-template-columns: 22px 200px;
   grid-row-gap: 10px;
   align-items: center;
+  width: 100%;
 }
 
 .checkbox-label {
@@ -65,6 +67,7 @@ h2 {
   background-color: #0080ff;
   color: white;
   border-radius: 8px;
+  
 }
 
 .graph {
