--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,6 @@ h2 {
   font-size: 20px;
 }
 
-
 .console-and-graph {
   display: flex;
 }
@@ -26,7 +25,7 @@ h2 {
 .console {
   padding: 15px;
   background-color: lightgray;
-  width: 20%;
+  width: 250px;
   border-radius: 0px 0px 10px 0px;
 }
 
@@ -46,7 +45,6 @@ h2 {
 #selectButton {
   margin-left: 5px;
   font-size: 14px;
-  width: 100%;
 }
 
 .console-data-panel {
@@ -54,7 +52,6 @@ h2 {
   grid-template-columns: 22px 200px;
   grid-row-gap: 10px;
   align-items: center;
-  width: 100%;
 }
 
 .checkbox-label {
@@ -74,7 +71,7 @@ h2 {
   padding: 10px;
   margin-top: 20px;
   margin-left: 10px;
-  width: 80%;
+  width: 75%;
 }
 
 body  {
