--- a/styles.css
+++ b/styles.css
@@ -64,7 +64,6 @@ h2 {
   background-color: #0080ff;
   color: white;
   border-radius: 8px;
-  
 }
 
 .graph {
@@ -77,4 +76,27 @@ h2 {
 body  {
   background-color: #FFFFF3;
   color: #585857;
+}
+
+.modal {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  background: rgba(214, 213, 213, 0.7);
+  z-index: 10;
+}
+
+.modal.open {
+   visibility: hidden;
+
+}
+
+
+.modal-child {
+  position: absolute;
+  top: 20%;
+  left: 50%;
+  transform: translate(-50%, -10%);
 }
