--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,28 @@ h2 {
   font-size: 20px;
 }
 
+#about-button {
+  cursor: pointer;
+}
+
+p {
+  color: black;
+}
+.quote {
+  font-variant: small-caps;
+  font-size: 25px;
+}
+
+.byline {
+  text-indent: 300px;
+  margin: 15px 0px;
+}
+
+.description {
+  text-align: justify;
+  line-height: 1.3;
+}
+
 .console-and-graph {
   display: flex;
 }
@@ -34,8 +56,8 @@ h2 {
   margin-bottom: 10px;
 }
 
-.console-subtitle.not-first {
-  margin-top: 25px;
+.console-subtitle:not(:first-child) {
+  margin-top: 35px;
 }
 
 .select-label {
@@ -64,6 +86,7 @@ h2 {
   background-color: #0080ff;
   color: white;
   border-radius: 8px;
+  cursor: pointer;
 }
 
 .graph {
@@ -84,19 +107,28 @@ body  {
   bottom: 0;
   right: 0;
   left: 0;
-  background: rgba(214, 213, 213, 0.7);
-  z-index: 10;
+  background-image: url("mapfre.jpg");
+  background-size: 100%;
+  z-index: 2;
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility 1s, opacity 1s;
 }
 
 .modal.open {
-   visibility: hidden;
-
+   visibility: visible;
+   opacity: 1;
+   transition: visibility 0s, opacity 1s;
 }
-
 
 .modal-child {
   position: absolute;
   top: 20%;
   left: 50%;
   transform: translate(-50%, -10%);
+  visibility: hidden;
+}
+
+.modal-child.open {
+  visibility: visible;
 }
