--- a/styles.css
+++ b/styles.css
@@ -22,12 +22,20 @@ h2 {
   cursor: pointer;
 }
 
+.modal-child {
+  background-color: white;
+  opacity: .8;
+  border-radius: 10px;
+  padding: 15px;
+}
+
 p {
   color: black;
 }
 .quote {
   font-variant: small-caps;
   font-size: 25px;
+  text-align: center;
 }
 
 .byline {
@@ -37,8 +45,23 @@ p {
 
 .description {
   text-align: justify;
-  line-height: 1.3;
+  line-height: 1.4;
 }
+
+#close-button {
+  display: block;
+  height: 30px;
+  width: 80px;
+  font-size: 16px;
+  background-color: #0080ff;
+  color: white;
+  border-radius: 8px;
+  cursor: pointer;
+  margin-top: 15px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 
 .console-and-graph {
   display: flex;
@@ -112,7 +135,7 @@ body  {
   z-index: 2;
   visibility: hidden;
   opacity: 0;
-  transition: visibility 1s, opacity 1s;
+  transition: visibility .75s, opacity .75s;
 }
 
 .modal.open {
