--- a/styles.css
+++ b/styles.css
@@ -60,8 +60,8 @@ p {
   margin-top: 15px;
   margin-left: auto;
   margin-right: auto;
+  opacity: 1;
 }
-
 
 .console-and-graph {
   display: flex;
