--- a/styles.css
+++ b/styles.css
@@ -167,12 +167,15 @@ sup {
 }
 
 .loader-and-graph {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  position: relative;
+  width: 100%;
 }
 
 #loader {
+  position: absolute;
+  left: 45%;
+  margin-left: -60px;
+  top: 200px;
   border: 16px solid #f3f3f3;
   border-top: 16px solid #3498db;
   border-radius: 50%;
