--- a/styles.css
+++ b/styles.css
@@ -199,9 +199,9 @@ body  {
   visibility: visible;
 }
 
-sup {
+/* sup {
   font-size:xx-small; vertical-align:super;
-}
+} */
 
 .footnote {
   margin-top: 10px;
